tdf#151413: add UTF-8 data to the Link clipboard format

And introduce methods in TransferableDataHelper to handle that.

Change-Id: I1d91f0f6b7e8523125f9cc1507dbd6737968f7d5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165607
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>